--- a/posts/index.org
+++ b/posts/index.org
@@ -15,7 +15,7 @@ What I want:
 
 To get networking in the guest I had to select NAT for network source and "hypervisor default" for device model as my NIC.
 
-I gave the following distros a spin:
+I gave the following distros a quick spin:
 - [[https://guix.gnu.org/manual/devel/en/html_node/Running-Guix-in-a-VM.html][GUIX]]: Running quickly but after that the going gets rough.
 - [[https://pureos.net/][PureOS]]: looks good (GNOME).
 - [[https://trisquel.info/][Trisquel]]
@@ -157,6 +157,81 @@ Basically, it is just these few things:
 - It Just Works\trade
   When I open a file, VS Code suggests extensions I can use. Just click "install" and you're good to go.
 - Integrated debugger
+
+* PUBLISHED New laptop arrived                                         :tech:
+CLOSED: [2022-06-08 Wed 18:51]
+
+My [[New laptop][new laptop]] arrived 'early' (May 31 instead of Jun 21: good marketing by Dell). These are my experiences so far with my intention to work under Windows instead of Ubuntu.
+
+- On the surface, Windows 11 isn't that much different from Windows 10. It may be very different under the hood, but I can't tell.
+- The [[https://docs.microsoft.com/windows/package-manager/winget/][winget]] package manager package manager works like a charm. I also installed apps through the store, just to experience the difference, but winget has a much wider choice. The weird thin is, that removing an app must be done by selecting "Uninstall" in the start menu...
+- [[https://docs.microsoft.com/windows/terminal/][Windows Terminal]] works fine and I may get used to [[https://docs.microsoft.com/powershell/][PowerShell]] as well.
+- I am having trouble using [[https://docs.microsoft.com/en-us/virtualization/hyper-v-on-windows/about/][Hyper-V]]:
+  - I can't share folders between the host and guest, like I am used to in e.g. VirtualBox. There is [[https://github.com/dorssel/usbipd-win][usbipd.win]] and you can of course use "Sharing" (i.e. Samba).
+  - I can't set the display resolution in Debian other than through Grub.
+- Migrating [[https://www.gnu.org/software/emacs/][Emacs]] was fairly painless. I just needed to set =$HOME= and install [[https://www.orgroam.com/manual.html#C-Compiler-for-Windows][MSys2]] for Org-roam. This latter also removed my need for [[https://www.cygwin.com/][cygwin]].
+- I also created =$HOME/bin= and added it to =$PATH= (mainly for sqlite)
+- It turns out [[https://www.docker.com/][Docker Desktop]] needs [[https://docs.microsoft.com/windows/wsl/][WSL]] (Windows Subsystem for Linux), so as I no longer need Cygwin, I decided to install Debian just for the fun of it (so far, I have no real need for it).
+
+On top of my original plan, I installed some additional apps:
+- Utilities:
+  - [[https://www.7-zip.org/][7-zip]]
+  - [[https://notepad-plus-plus.org/][Notepad++]] (associated with all text files instead of VSCode)
+  - I tried [[https://files.community/][Files]] as a tabbed file explorer, but found it too flaky, so now I am trying [[https://doublecmd.sourceforge.io/][Double commander]], even though I am not that fond of [[https://en.wikipedia.org/wiki/File_manager#Dual-pane_managers][dual-pane managers]]
+  - [[https://www.dropbox.com/][Dropbox]] to share my org files between machines (not really needed any more, now I am exclusively on Windows, but you never know...)
+  - [[https://rclone.org/][rclone]] (in =$HOME/bin=) for on-site and off-site backups
+  - [[https://www.putty.org/][Putty]]
+  - [[https://rufus.ie/][Rufus]]
+  - [[https://www.jam-software.com/treesize_free][TreeSize Free]]
+  - [[https://docs.microsoft.com/en-us/windows/powertoys/][PowerToys]]
+  - [[https://www.sysinternals.com][sysinternals]]
+- Dev:
+  - [[https://www.sqlite.org/][SQLite]] (in =$HOME/bin=)
+  - [[https://winmerge.org/][WinMerge]]
+  - [[https://dbeaver.io/][DBeaver]]
+  - [[https://www.lazarus-ide.org/][Lazarus]]
+- Productivity
+  - [[https://libreoffice.org/][LibreOffice]] although I use Google Docs when I can and Microsoft Office when I have to
+  - [[https://www.openoffice.org/][OpenOffice]]
+  - [[https://www.teamviewer.com/][TeamViewer]]
+  - [[https://zoom.us/][Zoom]]
+
+My intention is to install server components like [[https://docs.microsoft.com/en-us/sql/linux/sql-server-linux-docker-container-deployment?view=sql-server-ver16&pivots=cs1-bash][MSSQL]] through docker.
+
+App I like but don't need (yet):
+- [[https://www.jenkins.io/][Jenkins]] CI/CD
+- [[https://filezilla-project.org/][FileZilla]] because most of my customers use [[https://winscp.net/][WinSCP]] and using the same tool makes communication easier
+- [[https://www.audacityteam.org/][Audacity]] sound editor
+- [[https://www.openshot.org/][OpenShot]] video editor
+- [[https://inkscape.org/][InkScape]] vector-based drawing
+
+* PUBLISHED Emacs + GPG = EasyPG                                       :tech:
+CLOSED: [2022-06-06 Mon 11:09]
+
+I looked at [[https://keepass.info/][KeePass]] to store confidential information on Windows. But than it occured to me that org files can easily be encrypted, so I used that instead.
+
+Just add the extension =.gpg= to your file (so =vault.org= becomes =vault.org.gpg=) and your good to go. The double extension lets Emacs know its both encrypted and an org file.
+
+I love how org mode turns out to be the perfect PIM with every new step.
+
+And I was glad to find that EasyPG worked out of the box even on Windows.
+
+* PUBLISHED Website monitoring                                          :dev:
+CLOSED: [2022-06-05 Sun 12:20]
+
+I maintain a number of websites for different clients and need to monitor their status. At this point a simple check if the site is still up would be sufficient, so I would prefer something simple. Other requirements: open source, self-hosted, configurable, web dashboard, automatic alerte and preferably available through docker compose.
+
+Candidates:
+- [[https://www.nagios.org/][Nagios]] claims to be the industry standard for system monitoring but is a bit too much for me. There's also its open source fork [[https://icinga.com/][Icinga]].
+- [[https://www.zabbix.com/][Zabbix]] looks overly complicated
+- [[https://github.com/sanathp/statusok][StatusOK]] looks like it does exactly what I want, but seems to be discontinued.
+- [[https://dashy.to/][Dashy]]
+
+I also checked others, but found nothing I liked. I also checked if there's a suitable Python module, but also no luck.
+
+So, maybe roll my own? [[https://projectgurukul.org/python-website-monitoring/][This]] seems a start, and [[https://gist.github.com/adeekshith/fef4ff9949b88ce102bd][here]], [[https://motoma.io/basic-server-monitoring-with-python/][here]], and [[https://www.geeksforgeeks.org/python-script-to-monitor-website-changes/][here]] is more inspiration.
+
+To be continued...
 
 * PUBLISHED New laptop                                                 :tech:
 CLOSED: [2022-04-29 vr 13:49]
